# LLM-UAVswarm-ROS1

./: .gitignore  CLAUDE.md  Dockerfile  README.md  VERIFICATION.md  test_single_uav.sh
src/ladrc_controller/: CMakeLists.txt  package.xml
src/ladrc_controller/launch/: single_uav.launch  swarm.launch
src/ladrc_controller/src/: ladrc_position_controller_node.cpp
src/location_allocate/: CMakeLists.txt  package.xml  setup.py
src/location_allocate/scripts/: location_allocate_node
src/location_allocate/src/location_allocate/: location_allocate.py  visualize_goals.py
src/uav_swarm_interfaces/: CMakeLists.txt  package.xml
