<?xml version="1.0"?>
<package format="2">
  <name>ladrc_controller</name>
  <version>0.0.0</version>
  <description>LADRC position controller for multi-UAV swarm (ROS1 + MAVROS port)</description>
  <maintainer email="20233692@stu.cqu.edu.cn">yihuanghuan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>uav_swarm_interfaces</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>uav_swarm_interfaces</exec_depend>
</package>
