<?xml version="1.0"?>
<package format="2">
  <name>location_allocate</name>
  <version>0.0.0</version>
  <description>UAV formation scheduling layer with Hungarian algorithm (ROS1 port)</description>
  <maintainer email="20233692@stu.cqu.edu.cn">yihuanghuan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>uav_swarm_interfaces</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>uav_swarm_interfaces</exec_depend>
</package>
