<?xml version="1.0"?>
<package format="2">
  <name>uav_swarm_interfaces</name>
  <version>0.0.0</version>
  <description>Custom ROS messages for UAV swarm control (ROS1 port)</description>
  <maintainer email="20233692@stu.cqu.edu.cn">yihuanghuan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
